--- a/beta.html
+++ b/beta.html
@@ -159,6 +159,15 @@
     @media (max-width: 900px){
       .graph-row { grid-template-columns: 1fr; }
     }
+
+#scenario-planner.fade-in {
+  animation: fadeIn 0.4s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to   { opacity: 1; transform: translateY(0); }
+}  
   </style>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -172,7 +181,7 @@
     <button class="nav-toggle" aria-expanded="false">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
-      <a href="budget.html">Budget Planner</a>
+      <a href="budget.html">Budget Tool</a>
     </nav>
   </div>
 </header>
@@ -267,7 +276,7 @@
     </div>
 
     <!-- 🔵 ADDED: Scenario Planner section anchor -->
-    <section id="scenario-planner" class="cb-card" style="scroll-margin-top: 80px;">
+    <section id="scenario-planner" class="cb-card" style="scroll-margin-top: 80px; display:none;">
       <h2 style="margin:0 0 8px 0;">Scenario Planner</h2>
       <div class="cb-sub" style="margin:0 0 16px 0;">
         Explore different retirement ages, returns, and spending to see what’s “enough.”
@@ -308,10 +317,16 @@ document.addEventListener("DOMContentLoaded", () => {
   const nav = document.getElementById("primary-nav");
   if (!btn || !nav) return;
 
-  btn.addEventListener("click", () => {
-    const opened = nav.classList.toggle("open");
-    btn.setAttribute("aria-expanded", opened ? "true" : "false");
-  });
+btn.addEventListener("click", () => {
+    const target = document.getElementById("scenario-planner");
+    if (!target) return;
+
+    // ✅ Show the section
+    target.style.display = "block";
+
+    // ✅ Smooth scroll to it
+    target.scrollIntoView({ behavior: "smooth", block: "start" });
+});
 });
 </script>
 
@@ -333,6 +348,19 @@ function showScenarioPrompt() {
   box.dataset.active = "1";
 
   const btn = document.getElementById("scenarioBtn");
+
+    btn.addEventListener("click", () => {
+    const target = document.getElementById("scenario-planner");
+    if (!target) return;
+
+    // show the section (because you want it hidden initially)
+    target.style.display = "block";
+
+    // smooth scroll
+    target.scrollIntoView({ behavior: "smooth", block: "start" });
+  });
+}
+  
   btn.addEventListener("click", () => {
     const target = document.getElementById("scenario-planner");
     if (target) target.scrollIntoView({ behavior: "smooth", block: "start" });
