--- a/beta.html
+++ b/beta.html
@@ -54,7 +54,7 @@
     }
     #runCalc:hover { background: #0f5ad2; }
 
-    /* 🔵 ADDED: shared button class so the new button matches your style */
+    /* Shared button class for Scenario Planner button */
     .btn-primary {
       background: #1a73e8; color: white; border: none;
       font-size: 16px; padding: 14px 20px;
@@ -107,7 +107,7 @@
       white-space: normal; overflow-wrap: anywhere;
     }
 
-    /* Toggles (wrapper should expand properly; allow wrapping) */
+    /* Toggles (wrapper hidden by default) */
     #postCalcOptions {
       display:none; background:#f1f4f9 !important;
       border:1px solid #d7dce5 !important;
@@ -115,12 +115,11 @@
     }
     .toggle-row {
       display:flex; justify-content:space-between; gap:24px;
-      align-items:flex-start; flex-wrap:wrap; /* allow wrap so container grows */
+      align-items:flex-start; flex-wrap:wrap;
     }
     .toggle-item {
       display:flex; align-items:flex-start; gap:12px;
-      white-space: normal;               /* allow text to wrap in the item */
-      max-width: 100%;
+      white-space: normal; max-width: 100%;
     }
     .toggle-item .tooltip-click-container { align-items:flex-start; }
 
@@ -141,7 +140,7 @@
     /* Chart title/subtitle center */
     #chartTitle, #chartSubtitle { text-align: center; }
 
-    /* 🔵 ADDED: side-by-side graph + prompt */
+    /* Graph + prompt side-by-side */
     .graph-row {
       display: grid;
       grid-template-columns: 2fr 1fr;
@@ -160,14 +159,9 @@
       .graph-row { grid-template-columns: 1fr; }
     }
 
-#scenario-planner.fade-in {
-  animation: fadeIn 0.4s ease-out forwards;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to   { opacity: 1; transform: translateY(0); }
-}  
+    /* Scenario Planner reveal animation (optional) */
+    #scenario-planner.fade-in { animation: fadeIn 0.4s ease-out forwards; }
+    @keyframes fadeIn { from { opacity:0; transform:translateY(10px);} to {opacity:1; transform:translateY(0);} }
   </style>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -196,7 +190,7 @@
 
   <div class="cb-stack">
 
-    <!-- Inputs -->
+    <!-- Section 1: Inputs (visible on load) -->
     <div class="cb-card">
       <div class="cb-row">
         <div class="cb-field"><label>Date of Birth</label><input id="dob" type="date" /></div>
@@ -228,7 +222,7 @@
       <div class="cb-actions"><button id="runCalc">Run Calculation</button></div>
     </div>
 
-    <!-- Toggles -->
+    <!-- Section 2: Toggles (hidden) -->
     <div id="postCalcOptions" class="cb-card">
       <div class="toggle-row">
         <div class="toggle-item">
@@ -259,29 +253,28 @@
       </div>
     </div>
 
-    <!-- Chart -->
-    <div class="cb-card">
+    <!-- Section 2: Chart card (hidden) -->
+    <div id="chartSection" class="cb-card" style="display:none;">
       <h2 id="chartTitle" style="margin:0; font-size:22px; font-weight:700;">
         Projected Retirement Savings
       </h2>
       <div id="chartSubtitle" style="margin-bottom:14px; font-size:14px; color:#4a5568;"></div>
 
-      <!-- 🔵 ADDED: graph + prompt layout -->
       <div class="graph-row">
         <div id="chart" style="height:360px;"></div>
 
-        <!-- 🔵 ADDED: prompt appears after chart renders -->
+        <!-- Right-side prompt appears after chart renders -->
         <aside id="scenarioPrompt" aria-live="polite"></aside>
       </div>
     </div>
 
-    <!-- 🔵 ADDED: Scenario Planner section anchor -->
-    <section id="scenario-planner" class="cb-card" style="scroll-margin-top: 80px; display:none;">
+    <!-- Section 3: Scenario Planner (hidden) -->
+    <section id="scenario-planner" class="cb-card" style="scroll-margin-top:80px; display:none;">
       <h2 style="margin:0 0 8px 0;">Scenario Planner</h2>
       <div class="cb-sub" style="margin:0 0 16px 0;">
         Explore different retirement ages, returns, and spending to see what’s “enough.”
       </div>
-      <!-- Put your Scenario Planner UI here -->
+      <!-- Your Scenario Planner UI goes here -->
       <p style="margin:0;">(Your scenario planner content will live here.)</p>
     </section>
 
@@ -317,16 +310,10 @@ document.addEventListener("DOMContentLoaded", () => {
   const nav = document.getElementById("primary-nav");
   if (!btn || !nav) return;
 
-btn.addEventListener("click", () => {
-    const target = document.getElementById("scenario-planner");
-    if (!target) return;
-
-    // ✅ Show the section
-    target.style.display = "block";
-
-    // ✅ Smooth scroll to it
-    target.scrollIntoView({ behavior: "smooth", block: "start" });
-});
+  btn.addEventListener("click", () => {
+    const opened = nav.classList.toggle("open");
+    btn.setAttribute("aria-expanded", opened ? "true" : "false");
+  });
 });
 </script>
 
@@ -334,7 +321,7 @@ btn.addEventListener("click", () => {
 <script>
 let hcChart = null;
 
-/* 🔵 ADDED: helper to show the right-side scenario prompt after chart renders */
+/* Show the right-side scenario prompt after chart renders */
 function showScenarioPrompt() {
   const box = document.getElementById("scenarioPrompt");
   if (!box || box.dataset.active === "1") return;
@@ -348,27 +335,20 @@ function showScenarioPrompt() {
   box.dataset.active = "1";
 
   const btn = document.getElementById("scenarioBtn");
-
-    btn.addEventListener("click", () => {
+  btn.addEventListener("click", () => {
     const target = document.getElementById("scenario-planner");
     if (!target) return;
 
-    // show the section (because you want it hidden initially)
-    target.style.display = "block";
-
-    // smooth scroll
+    target.style.display = "block";           // reveal Scenario Planner
+    target.classList.add("fade-in");          // optional animation
     target.scrollIntoView({ behavior: "smooth", block: "start" });
-  });
-}
-  
-  btn.addEventListener("click", () => {
-    const target = document.getElementById("scenario-planner");
-    if (target) target.scrollIntoView({ behavior: "smooth", block: "start" });
   });
 }
 
 document.getElementById("runCalc").addEventListener("click", function () {
+  // Reveal Section 2 (toggles + chart card)
   document.getElementById("postCalcOptions").style.display = "block";
+  document.getElementById("chartSection").style.display = "block";
 
   function updateChartSubtitle() {
     const inf = document.getElementById('inflationToggle').checked;
@@ -480,10 +460,8 @@ document.getElementById("runCalc").addEventListener("click", function () {
     tooltip:{
       shared:true,
       formatter: function () {
-        // Year header
         const x = (this.points && this.points[0]) ? this.points[0].x : this.x;
         const year = Highcharts.dateFormat('%Y', x);
-        // Lines with whole-dollar formatting
         const lines = (this.points || [this.point]).map(p =>
           `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y, 0)}</b>`
         ).join('<br/>');
@@ -499,7 +477,7 @@ document.getElementById("runCalc").addEventListener("click", function () {
     ]
   });
 
-  /* 🔵 ADDED: now that the chart exists, reveal the right-side prompt */
+  // Now that the chart exists, reveal the right-side prompt
   showScenarioPrompt();
 });
 </script>
